--- a/blog-ideas/_posts/2020-09-12-ideas-00.markdown
+++ b/blog-ideas/_posts/2020-09-12-ideas-00.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "New Beginning"
+title:  "ideas [0]"
 date:   2020-09-09 21:21:11 +0900
-categories: jekyll update
+category: ideas
 ---
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
