--- a/longreads/_posts/2019-08-24-momentum.markdown
+++ b/longreads/_posts/2019-08-24-momentum.markdown
@@ -5,7 +5,7 @@ date:   2019-08-24 18:12:11 +0900
 category: longreads
 ---
 
-**Disclosure: I had started working on this draft seven months ago, back when the subject of this entry actually took place.**
+Disclosure: I had started working on this draft seven months ago, back when the subject of this entry actually took place.
 
 I had tucked it aside from publishing because the Emory Wheel, the student-run editorial at my now-alma mater, had heard about my story and helped me chronicle the adventure that I had embarked on.
 
