--- a/journey/_posts/2020-09-16-mvp.markdown
+++ b/journey/_posts/2020-09-16-mvp.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "On building jinyoung.xyz mvp"
+title:  "On Building jinyoung.xyz"
 date:   2020-09-16 00:21:11 +0900
 category: journey
 ---
 
-After a week of rabbitholes and flipping through god-knows-how-many documentations and tutorials, jinyoung.xyz mvp (minimum viable product) is finished. 
+After a week of rabbitholes and flipping through god-knows-how-many browser tabs of documentations and tutorials, jinyoung.xyz mvp (minimum viable product) is finally developed. 
 
 I knew that, like most things in the development world, this project will take much longer than initially anticipated, due to the fact that the very beginning of crafting this blog stemmed from blissful ignorance on certain key things like learning how web-hosting works, how to work with SASS (on top of CSS), how to self-host Google Fonts (key if you don't want Google to track your site's visitors via their API)... The list goes on, and I have my Github Contributions graphic to show for the countless iterations I have done in order to spruce up jinyoung.xyz to where it is today.
 
