--- a/journey/_posts/2020-10-02-routines.markdown
+++ b/journey/_posts/2020-10-02-routines.markdown
@@ -7,7 +7,9 @@ category: journey
 
 I've finally settled down, after having been on the move for a year and a half. 
 
-After a cohosting a workshop in Guatemala and staying in the country for two weeks to explore its wonderful coffeelands, I finished things off in Atlanta upon my graduation, then headed over to Portugual for five weeks to study the portuguese language. Next, I was off on a 9-day research trip to Tanzania, then made a return to England to see my brother Ryan graduate, visited my friend Josep in Paris for a weekend, went to Iceland on a family trip, and made a brief stop in Korea until taking off again to Panama where I worked and lived for six months.  
+After a cohosting a workshop in Guatemala and staying in the country for two weeks to explore its wonderful coffeelands, I finished things off in Atlanta upon my graduation, then headed over to Portugual for five weeks to study the portuguese language. 
+
+Next, I was off on a 9-day research trip to Tanzania, then made a return to England to see my brother Ryan graduate, visited my friend Josep in Paris for a weekend, went to Iceland on a family trip, and made a brief stop in Korea until taking off again to Panama where I worked and lived for six months.  
 
 Due to my prolonged absence from the US, I was starting to get worried about my permanent residence being taken away at immigration so, at the height of the pandemic, I am back in the States. 
 
