--- a/journey/_posts/2020-10-02-routines.markdown
+++ b/journey/_posts/2020-10-02-routines.markdown
@@ -5,7 +5,7 @@ date:   2020-10-05 06:05:11 -0500
 category: journey
 ---
 
-I've finally settled down, after having been on the move for a year and a half. 
+I've finally settled down, after having been on the move for the past year and a half. 
 
 After a cohosting a workshop in Guatemala and staying in the country for two weeks to explore its wonderful coffeelands, I finished things off in Atlanta upon my graduation, then headed over to Portugual for five weeks to study the portuguese language. 
 
