third draft. important hyperlink

--- a/journey/_posts/2020-10-02-routines.markdown
+++ b/journey/_posts/2020-10-02-routines.markdown
@@ -15,11 +15,13 @@ Due to my prolonged absence from the US, I was starting to get worried about my 
 
 In between the nomadic journey and finally returning to the US for good, I was graced by the opportunity to spend six months in my hometown Daejeon. Those six months were, for the most part, spent at home, whereby I devoted to my attention to retrospecting my journey, and to cultivate my growing understanding of this new field I have begun to take quite seriously. 
 
-With all the stops I made in the past year and half, I am finding myself returning, yet again, to the city I have gotten to love: Asheville, North Carolina. This is the place that was my homebase during the summer of 2018, where I took up a seasonal job as a wilderness trail maintainer.
+With all the stops I made in the past year and half, I am finding myself returning to the city I have gotten to love: Asheville, North Carolina. 
+
+This is the place that was my homebase during the summer of 2018, where I took up a seasonal job as a wilderness trail maintainer.
 
 It's really come full circle. 
 
-And my decision to live here for the next six months is my deliberate attempt to reconnect with a place that is so dear to my identity.
+And my decision to live here for the next six months is my deliberate attempt to reconnect with a place that is so dear to my identity. The Southern Appalachians are a place where I had finally [become comfortable with my self-identity](https://www.facebook.com/photo.php?fbid=1752903158112310&set=t.100001779277141&type=3) two years ago, having lived as a foreigner of other's cultures for more than a decade of existence. 
 
 Here, I will be continuing to challenge my understanding of software development, work on a backlogged list of projects, and build up my knowledge in data structures and algorithms so that I can be ready for a job as a software enginner towards the end of my time here. 
 
